--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#game {
+.game {
   overflow: auto;
   width: 300px
   height: 300px;
@@ -6,10 +6,10 @@
   background: blue;
   padding: 10px;
 }
-#game div {
+.game div {
   clear: both;
 }
-#game button {
+.game button {
   display: block;
   float: left;
   width: 50px;
@@ -17,7 +17,7 @@
   margin: 5px 10px;
   margin: 0 auto;
 }
-#gameDisplay {
+.gameDisplay {
   padding: 20px 10px;
   font-size: 24px;
 }
